test: OrderServiceTest 가독성 개선